DuPont DevSB/src/objects/pse__Utilization_Summary__c.object
<CustomObject>
    <description>If Calculate Summary By Role, in the Utilization custom setting, is set to True, FinancialForce PSA creates Utilization Summary records when calculating scheduled utilization. In contrast to Utilization Detail, this object summarizes utilization by role rather than resource; it can therefore summarize hours from unheld resource requests (these are never linked to a resource). Therefore, utilization summaries give a fuller picture of capacity because these hours are summarized alongside those from held resource requests, assignments, and calendars. You can use this information to plan for future capacity by role.

Optionally, total unheld hours can be weighted by the percentage probability of closing an opportunity linked to the resource request. Utilization calculations have a master-detail relationship with utilization summaries.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Actual_Billable_Hours__c</fullName>
        <label>Actual Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Credited_Hours__c</fullName>
        <label>Actual Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Excluded_Hours__c</fullName>
        <label>Actual Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Non_Billable_Hours__c</fullName>
        <label>Actual Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Billable_Hours__c</fullName>
        <label>Assigned Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Credited_Hours__c</fullName>
        <label>Assigned Credited Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Excluded_Hours__c</fullName>
        <label>Assigned Excluded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Non_Billable_Hours__c</fullName>
        <label>Assigned Non-Billable Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Calendar_Hours__c</fullName>
        <label>Calendar Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Utilization Summary</relationshipLabel>
        <relationshipName>Utilization_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Held_Hours_Opp_Pct_Weighted__c</fullName>
        <label>Held Hours Opp Pct Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Held_Hours__c</fullName>
        <label>Held Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Utilization Summary</relationshipLabel>
        <relationshipName>Utilization_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Utilization Summary</relationshipLabel>
        <relationshipName>Utilization_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Remaining_Capacity__c</fullName>
        <formula>IF(pse__Calendar_Hours__c=0,
0,
(pse__Calendar_Hours__c - pse__Assigned_Billable_Hours__c - pse__Assigned_Excluded_Hours__c - pse__Assigned_Credited_Hours__c - pse__Assigned_Non_Billable_Hours__c - pse__Held_Hours__c -  pse__Unheld_Hours__c) / pse__Calendar_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Role__c</fullName>
        <label>Resource Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Target_Hours__c</fullName>
        <label>Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Template_Key__c</fullName>
        <label>Template Key</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Utilization Summary</relationshipLabel>
        <relationshipName>Utilization_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours_Opp_Pct_Weighted__c</fullName>
        <formula>pse__Assigned_Billable_Hours__c + pse__Assigned_Excluded_Hours__c + pse__Assigned_Credited_Hours__c + pse__Assigned_Non_Billable_Hours__c + pse__Held_Hours_Opp_Pct_Weighted__c + pse__Unheld_Hours_Opp_Pct_Weighted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Opp Pct Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours__c</fullName>
        <formula>pse__Assigned_Billable_Hours__c + pse__Assigned_Excluded_Hours__c + pse__Assigned_Credited_Hours__c + pse__Assigned_Non_Billable_Hours__c +  pse__Held_Hours__c + pse__Unheld_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Group by Practice</fullName>
                </value>
                <value>
                    <fullName>Group by Region</fullName>
                </value>
                <value>
                    <fullName>Practice</fullName>
                </value>
                <value>
                    <fullName>Practice by Group</fullName>
                </value>
                <value>
                    <fullName>Practice by Region</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Region by Group</fullName>
                </value>
                <value>
                    <fullName>Region by Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Unheld_Hours_Opp_Pct_Weighted__c</fullName>
        <label>Unheld Hours Opp Pct Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Unheld_Hours__c</fullName>
        <label>Unheld Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation__c</fullName>
        <label>Utilization Calculation</label>
        <referenceTo>pse__Utilization_Calculation__c</referenceTo>
        <relationshipLabel>Utilization Summary</relationshipLabel>
        <relationshipName>Utilization_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Utilization Summary</label>
    <nameField>
        <displayFormat>US-{0000000000}</displayFormat>
        <label>Utilization Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>